[package]
name = "ghh"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
bollard = "0.11.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
thiserror = "1.0.29"
tokio = { version = "1.11.0", features = ["macros"] }
